--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 amqp==5.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+async-timeout==5.0.1
 attrs==24.2.0
 billiard==4.2.1
+braq==0.0.7
 celery==5.4.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
@@ -28,6 +30,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 outcome==1.3.0.post0
 packaging==24.2
+paradict==0.0.9
 pluggy==1.5.0
 prompt_toolkit==3.0.48
 pydantic==2.10.0
@@ -40,9 +43,11 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-multipart==0.0.17
 PyYAML==6.0.2
+redis==5.2.0
 requests==2.32.3
 rich==13.9.4
 selenium==4.18.1
+shared==0.0.30
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
@@ -55,6 +60,7 @@ typer==0.13.1
 typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
+ustrid==0.0.3
 uvicorn==0.27.0
 uvloop==0.21.0
 vine==5.1.0
@@ -63,4 +69,5 @@ wcwidth==0.2.13
 webdriver-manager==4.0.1
 websocket-client==1.8.0
 websockets==14.1
+written==0.0.4
 wsproto==1.2.0
