--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.109.1
 fastapi-cli==0.0.5
+flower==2.0.1
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.27.2
+humanize==4.11.0
 idna==3.10
 iniconfig==2.0.0
 Jinja2==3.1.4
@@ -32,6 +34,7 @@ outcome==1.3.0.post0
 packaging==24.2
 paradict==0.0.9
 pluggy==1.5.0
+prometheus_client==0.21.0
 prompt_toolkit==3.0.48
 pydantic==2.10.0
 pydantic-settings==2.6.1
@@ -42,6 +45,7 @@ pytest==8.0.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 python-multipart==0.0.17
+pytz==2024.2
 PyYAML==6.0.2
 redis==5.2.0
 requests==2.32.3
@@ -54,6 +58,7 @@ sniffio==1.3.1
 sortedcontainers==2.4.0
 starlette==0.35.1
 tomli==2.1.0
+tornado==6.4.1
 trio==0.27.0
 trio-websocket==0.11.1
 typer==0.13.1
