--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,9 +14,18 @@ services:
       test: ["CMD", "curl", "-f", "http://localhost:4444"]
 
   api:
-    extends:
-      file: base.yml
-      service: base
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+    environment:
+      - SELENIUM_HOST=selenium
+      - SELENIUM_PORT=4444
+      - HEADLESS=true
+      - DEBUG=false
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     ports:
       - "8001:8000"
     command: "uvicorn app.main:app --host 0.0.0.0 --port 8000"
@@ -34,9 +43,18 @@ services:
       - redis-data:/data
 
   celery_worker:
-    extends:
-      file: base.yml
-      service: base
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+    environment:
+      - SELENIUM_HOST=selenium
+      - SELENIUM_PORT=4444
+      - HEADLESS=true
+      - DEBUG=false
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     command: celery -A worker.worker.celery_app worker --loglevel=info --concurrency=30
     depends_on:
       - api
@@ -44,9 +62,18 @@ services:
       - selenium
 
   flower:
-    extends:
-      file: base.yml
-      service: base
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - .:/app
+    environment:
+      - SELENIUM_HOST=selenium
+      - SELENIUM_PORT=4444
+      - HEADLESS=true
+      - DEBUG=false
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     command: celery -A worker.worker.celery_app flower --port=5555
     ports:
       - "5555:5555"
