--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,6 +20,7 @@ services:
         - FILES_CACHE_BUST=${FILES_CACHE_BUST:-$(date +%s)}
       context: .
       dockerfile: Dockerfile
+    command: ["bash", "-c", "uvicorn app.main:app --host 0.0.0.0 --port 8000 & celery -A worker.worker.celery_app worker --loglevel=info --concurrency=30 & celery -A worker.worker.celery_app flower --port=5555"]
     volumes:
       - .:/app
     environment:
